--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
     "@angular/router": "^5.2.0",
     "angular-in-memory-web-api": "^0.5.4",
     "core-js": "^2.4.1",
-    "karma-firefox-launcher": "^1.1.0",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
@@ -48,8 +47,10 @@
     "karma": "~2.0.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "^1.2.1",
+    "karma-firefox-launcher": "^1.1.0",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "karma-phantomjs-launcher": "^1.0.4",
     "protractor": "~5.1.2",
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
